--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -25,10 +25,10 @@ status-website:
 # See https://upptime.js.org/docs/configuration
 
 workflowSchedule:
-  graphs: "0 23 * * *"
+  graphs: "*/5 * * * *"
   responseTime: "*/5 * * * *"
-  staticSite: "0 23 * * *"
+  staticSite: "*/30 * * * *"
   summary: "0 23 * * *"
-  updateTemplate: "0 23 * * *"
+  updateTemplate: "*/30 * * * *"
   updates: "*/30 * * * *"
   uptime: "*/5 * * * *"
