--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -25,10 +25,10 @@ status-website:
 # See https://upptime.js.org/docs/configuration
 
 workflowSchedule:
-  graphs: "*/5 * * * *"
-  responseTime: "*/5 * * * *"
-  staticSite: "*/30 * * * *"
-  summary: "0 23 * * *"
-  updateTemplate: "*/30 * * * *"
-  updates: "*/30 * * * *"
+  graphs: "*/30 * * * *"
+  responseTime: "*/30 * * * *"
+  staticSite: "0 1 * * *"
+  summary: "*/30 * * * *"
+  updateTemplate: "0 0 * * *"
+  updates: "0 3 * * *"
   uptime: "*/5 * * * *"
