--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -7,6 +7,8 @@ sites:
     url: https://transfer.sh/
   - name: gofile.io
     url: https://gofile.io/
+  - name: Heroku
+    url: https://theroku.com/
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
