--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -8,7 +8,7 @@ sites:
   - name: gofile.io
     url: https://gofile.io/
   - name: Heroku
-    url: https://theroku.com/
+    url: https://heroku.com/
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
